apps/hello-failover/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-failover
spec:
  selector:
    app: hello-failover
  ports:
    - port: 8080
      targetPort: 8080
