apps/hello-failover/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-failover
spec:
  to:
    kind: Service
    name: hello-failover
  port:
    targetPort: 8080
  tls:
    termination: edge
